# ChangeLog for net-analyzer/packit
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/packit/ChangeLog,v 1.26 2011/08/01 20:42:38 jer Exp $

*packit-1.0-r2 (01 Aug 2011)

  01 Aug 2011; Jeroen Roovers <jer@gentoo.org> packit-1.0-r1.ebuild,
  +packit-1.0-r2.ebuild, +files/packit-1.0-format.patch,
  +files/packit-1.0-overflow.patch:
  Fix buffer overflows (bug #337851). Fix MAC address output format. Set RDEPEND.

  15 Sep 2010; Jeroen Roovers <jer@gentoo.org> packit-1.0-r1.ebuild:
  Fix HOMEPAGE and SRC_URI.

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org> packit-1.0-r1.ebuild:
  Transfer Prefix keywords

  06 Feb 2008; Fabian Groffen <grobian@gentoo.org> packit-1.0-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*packit-1.0-r1 (10 Oct 2006)

  10 Oct 2006; Markus Ullmann <jokey@gentoo.org>
  +files/packit-1.0-noopt.patch, +files/packit-1.0-nostrip.patch,
  -packit-1.0.ebuild, +packit-1.0-r1.ebuild:
  Fix for segv bug #148094 thanks to Sergio Rubio for needed patch

  15 Feb 2006; Markus Ullmann <jokey@gentoo.org> packit-1.0.ebuild:
  Removing virtual/libpcap wrt bug #117898

  10 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> packit-1.0.ebuild:
  Use virtual/libpcap for bug 117745. Thanks to Michael Zanetta <grimmlin at
  pentoo dot ch>.

  09 Oct 2005; <mkay@gentoo.org> packit-1.0.ebuild:
  Adding libpcap to dependencies. Closing bug #108117

  06 May 2005; Sven Wegener <swegener@gentoo.org> packit-1.0.ebuild:
  Removed * postfix from <, <=, >= and > dependencies.

  17 Apr 2005; Marcelo Goes <vanquirius@gentoo.org> packit-1.0.ebuild:
  Fix a header problem with libpcap. Thanks to soulse for testing the fix.

  09 Mar 2005; Michael Sterrett <mr_bones_@gentoo.org> -packit-0.7.ebuild:
  clean old broken ebuild

  29 Jan 2005; Daniel Black <dragonheart@gentoo.org> packit-0.7.ebuild,
  packit-1.0.ebuild:
  moved to virtual/libpcap dependancy
