@@ -7,13 +7,13 @@ AUX packit-1.0-nostrip.patch 202 RMD160 09492fa051e0d26e611540ed2adcac8b81eb5652
 AUX packit-1.0-overflow.patch 1444 RMD160 cac2ccfc6639e2690e0426d73332b54a9aebaff0 SHA1 08d779e48e8eacda9d8bd2ccfb561042b5a6d06e SHA256 3d7d84148e363c90206b12c9958b8beeeac611f61e70660c92cd849e14764d76
 DIST packit-1.0.tgz 138367 RMD160 02b2ec56ccac5f8d755c0d84f1360b1cea698fce SHA1 21e1540c55879123d6bcca92c64d371b734893b1 SHA256 dd03023a03b3c98819f4da5c23426d103ed3f457562e2afda2eb3ebc419ad8fa
 EBUILD packit-1.0-r1.ebuild 893 RMD160 d8e6852d3073c102dc8389e2d7dd9c74234ca0c4 SHA1 27cceba5d074780c706797150e0b6490ba507879 SHA256 b5a797c8b21a1f935fa250fc91743fb55937bf5e55f053e4c23cff2556717f6d
-EBUILD packit-1.0-r2.ebuild 926 RMD160 902754eea9d2317aa516e3391d00d75de25beb11 SHA1 7c47110465c41854d15a03c6aac3136824bdf85c SHA256 b330496c36b8b6e65ff142851fdde237a894c984ed8b899ded4cee4c35aecb14
-MISC ChangeLog 3463 RMD160 13ca962a3a658d80d495fb06631bada29c02312f SHA1 59b4a091bcf7a53c9487f25ef163d128fcbab698 SHA256 1e12effbeb9dbf4751bf82d26140e311d07eab3f21eb6c5405b74d64bc31cd5d
+EBUILD packit-1.0-r2.ebuild 935 RMD160 05f939f3785bfb0c6e377dde05fc0f62c17f5602 SHA1 8f6035557fec690300b77b2e85bf3008600a1594 SHA256 597f2de6e8a04acd21e35059a5dcaa58e82641e5ce3c2bfe6d0b6f439775411f
+MISC ChangeLog 3572 RMD160 9f483ad7706a6473e71235f8ff47ee6a43fc43ab SHA1 90e11bfa120f1cc4cbadd2f111a12711906b8cb7 SHA256 7205dba41f6d594d965d1158be6a2123b3dabc3746309ac110d8c4bfbadb2d3a
 MISC metadata.xml 291 RMD160 25863743fcc91ab24f636e83c5c6aa83daf602c4 SHA1 9f6384c56d4774e62cbdc4cc4b3cbea18ebb510e SHA256 e16c823e5a24e2e43fedf44da3c8e667d6eefb565f0f0f6f9eeab709ab142d61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk43D8MACgkQVWmRsqeSphO7DACeLPF3pDumR3kMkKOZyUcon0BY
-NwYAn3NjmtyDl0NbFsv25AIp1IWDT8ON
-=9vNG
+iEYEARECAAYFAk/Mm1kACgkQVWmRsqeSphNBMgCfQUZu3FEJhuuRIOl/VSqwReBg
+XeYAn3gnAmGach+bC159mgUE9pPUm+i1
+=/b06
 -----END PGP SIGNATURE-----
